--- a/index.html
+++ b/index.html
@@ -62,7 +62,27 @@
     </section>
     <section class="categories">
         <div class="container">
-
+<h3 class="categories__subtitle">Engage Visitors</h3>
+<h2 class="categories__title">Understand your audience</h2>
+<p class="categories__text">Early stage company? Eligible applicants get all of our products for just $49 a month.</p>
+<div class="categories__list">
+<div class="categories__card">
+    <img class="categories__img" src="./assets/categories1.png" alt="#">
+    <p class="categories__name">Developers</p>
+</div>
+<div class="categories__card">
+    <img class="categories__img"  src="./assets/categories2.png" alt="#">
+    <p class="categories__name">Entertainment</p>
+</div>
+<div class="categories__card">
+    <img class="categories__img" src="./assets/categories3.png" alt="#">
+    <p class="categories__name">Athletes</p>
+</div>
+<div class="categories__card">
+    <img class="categories__img" src="./assets/categories4.png" alt="#">
+    <p class="categories__name">Creators</p>
+</div>
+</div>
         </div>
     </section>
     <section class="about">
@@ -79,10 +99,16 @@
     <section class="subscription">
         <div class="container">
             <img src="./assets/subscription.png" alt="#">
+            <div class="subscription__content">
             <h2 class="subscription__title">Start your free trial.</h2>
             <p class="subscription__text">Get notified about company updates, news and blog posts. We hate spam.</p>
-            <form aria-placeholder="Enter your email"></form>
-            <button class="btn">Get Started</button>
+            <div class="subscription__form">
+            <form>
+                <input type="email" class="subscription__field" name="email" placeholder="Enter your email">
+                <button class="btn">Get Started</button>
+            </form>
+        </div>
+        </div>
         </div>
     </section>
     <section class="footer">
