--- a/index.html
+++ b/index.html
@@ -4,116 +4,215 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Startup landing</title>
-    <link rel="stylesheet" href="style.css"></linkrel>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-<div class="site">
-
-    
-    <div class="header">
+    <div class="site">
+      <div class="header">
         <div class="container">
-            <div class="logo">
-                <img src="./assets/logo.png" alt="logo">
-                <div class="logo__contant">
-                <p class="logo__name">Foundation</p>
-                <p class="logo__text">Startup landing template</p>
-                </div>
+          <div class="logo">
+            <img src="./assets/logo.png" alt="logo" />
+            <div class="logo__contant">
+              <p class="logo__name">Foundation</p>
+              <p class="logo__text">Startup landing template</p>
             </div>
+          </div>
           <nav class="nav">
-               <ul class="nav__list">
-                <li class="nav__item"><a class="nav__link" href="#">Home</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Stories</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Library</a></li>
-               </ul>
-               <button class="btn">Get Started</button>
-            </nav>
+            <ul class="nav__list">
+              <li class="nav__item"><a class="nav__link" href="#">Home</a></li>
+              <li class="nav__item">
+                <a class="nav__link" href="#">Stories</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#">Library</a>
+              </li>
+            </ul>
+            <button class="btn">Get Started</button>
+          </nav>
         </div>
-    </div>
-    <section class="promo"> 
+      </div>
+      <section class="promo">
         <div class="container">
-            <div class="promo__contant">
+          <div class="promo__contant">
             <h1 class="promo__title">A bill that’s fair and flexible</h1>
-            <p class="promo__text">Create live segments and target the right people for messages based on their behaviors.</p>
+            <p class="promo__text">
+              Create live segments and target the right people for messages
+              based on their behaviors.
+            </p>
             <button class="btn">Get Started</button>
             <button class="btn btn-white">Learn More</button>
+          </div>
+          <img src="./assets/promo.png" alt="#" />
         </div>
-            <img src="./assets/promo.png" alt="#">
-
-        </div>
-    </section>
-    <section class="possibilities">
+      </section>
+      <section class="possibilities">
         <div class="container">
-            <div class="possibilities__card">
-                <img class="possibilities__img" src="./assets/possibilities1.png" alt="#">
-                <p class="possibilities__text">Software development tool used by teams.</p>
-                <a class="possibilities__link" href="#">Learn More</a>
-            </div>
-            <div class="possibilities__card">
-                <img class="possibilities__img" src="./assets/possibilities2.png" alt="#">
-                <p class="possibilities__text">Collaborate on code and manage your Git repositories.</p>
-                <a class="possibilities__link" href="#">See Features</a>
-            </div>
-            <div class="possibilities__card">
-                <img class="possibilities__img" src="./assets/possibilities3.png" alt="#">
-                <p class="possibilities__text">Organize your work in one place.</p>
-                <a class="possibilities__link" href="#">Open a Ticket</a>
-            </div>
+          <div class="possibilities__card">
+            <img
+              class="possibilities__img"
+              src="./assets/possibilities1.png"
+              alt="#"
+            />
+            <p class="possibilities__text">
+              Software development tool used by teams.
+            </p>
+            <a class="possibilities__link" href="#">Learn More</a>
+          </div>
+          <div class="possibilities__card">
+            <img
+              class="possibilities__img"
+              src="./assets/possibilities2.png"
+              alt="#"
+            />
+            <p class="possibilities__text">
+              Collaborate on code and manage your Git repositories.
+            </p>
+            <a class="possibilities__link" href="#">See Features</a>
+          </div>
+          <div class="possibilities__card">
+            <img
+              class="possibilities__img"
+              src="./assets/possibilities3.png"
+              alt="#"
+            />
+            <p class="possibilities__text">Organize your work in one place.</p>
+            <a class="possibilities__link" href="#">Open a Ticket</a>
+          </div>
         </div>
-    </section>
-    <section class="categories">
+      </section>
+      <section class="categories">
         <div class="container">
-<h3 class="categories__subtitle">Engage Visitors</h3>
-<h2 class="categories__title">Understand your audience</h2>
-<p class="categories__text">Early stage company? Eligible applicants get all of our products for just $49 a month.</p>
-<div class="categories__list">
-<div class="categories__card">
-    <img class="categories__img" src="./assets/categories1.png" alt="#">
-    <p class="categories__name">Developers</p>
-</div>
-<div class="categories__card">
-    <img class="categories__img"  src="./assets/categories2.png" alt="#">
-    <p class="categories__name">Entertainment</p>
-</div>
-<div class="categories__card">
-    <img class="categories__img" src="./assets/categories3.png" alt="#">
-    <p class="categories__name">Athletes</p>
-</div>
-<div class="categories__card">
-    <img class="categories__img" src="./assets/categories4.png" alt="#">
-    <p class="categories__name">Creators</p>
-</div>
-</div>
+          <h3 class="categories__subtitle">Engage Visitors</h3>
+          <h2 class="categories__title">Understand your audience</h2>
+          <p class="categories__text">
+            Early stage company? Eligible applicants get all of our products for
+            just $49 a month.
+          </p>
+          <div class="categories__list">
+            <div class="categories__card">
+              <img
+                class="categories__img"
+                src="./assets/categories1.png"
+                alt="#"
+              />
+              <p class="categories__name">Developers</p>
+            </div>
+            <div class="categories__card">
+              <img
+                class="categories__img"
+                src="./assets/categories2.png"
+                alt="#"
+              />
+              <p class="categories__name">Entertainment</p>
+            </div>
+            <div class="categories__card">
+              <img
+                class="categories__img"
+                src="./assets/categories3.png"
+                alt="#"
+              />
+              <p class="categories__name">Athletes</p>
+            </div>
+            <div class="categories__card">
+              <img
+                class="categories__img"
+                src="./assets/categories4.png"
+                alt="#"
+              />
+              <p class="categories__name">Creators</p>
+            </div>
+          </div>
         </div>
-    </section>
-    <section class="about">
+      </section>
+      <section class="about">
         <div class="container">
-            <div class="about__contant">
+          <div class="about__contant">
             <h3 class="about__subtitle">Communicate Better</h3>
             <h2 class="about__title">Millions of Wi-Fi hotsports</h2>
-            <p class="about__text">Three products that can be used independently or combined together for your company’s needs.</p>
+            <p class="about__text">
+              Three products that can be used independently or combined together
+              for your company’s needs.
+            </p>
             <button class="btn">Get Started</button>
+          </div>
+          <img src="./assets/about.png" alt="#" />
         </div>
-        <img src="./assets/about.png" alt="#">
-        </div>
-    </section>
-    <section class="subscription">
+      </section>
+      <section class="subscription">
         <div class="container">
-            <img src="./assets/subscription.png" alt="#">
-            <div class="subscription__content">
+          <img src="./assets/subscription.png" alt="#" />
+          <div class="subscription__content">
             <h2 class="subscription__title">Start your free trial.</h2>
-            <p class="subscription__text">Get notified about company updates, news and blog posts. We hate spam.</p>
+            <p class="subscription__text">
+              Get notified about company updates, news and blog posts. We hate
+              spam.
+            </p>
             <div class="subscription__form">
-            <form>
-                <input type="email" class="subscription__field" name="email" placeholder="Enter your email">
+              <form>
+                <input
+                  type="email"
+                  class="subscription__field"
+                  name="email"
+                  placeholder="Enter your email"
+                />
                 <button class="btn">Get Started</button>
-            </form>
+              </form>
+            </div>
+          </div>
         </div>
+      </section>
+      <section class="footer">
+        <div class="container">
+          <div class="footer__description">
+            <div class="logo">
+              <img src="./assets/logo.png" alt="logo" />
+              <div class="logo__contant">
+                <p class="logo__name">Foundation</p>
+                <p class="logo__text">Startup landing template</p>
+              </div>
+            </div>
+            <p class="footer__text">
+              Foundation is a website template for startups and small teams. It
+              helps to build a website in no time.
+            </p>
+            <img src="./assets/AppStore.png" alt="appStore" />
+            <img src="./assets/GooglePlay.png" alt="GooglePlay" />
+          </div>
+          <div class="footer__links">
+            <h4 class="footer__title">Product</h4>
+            <ul>
+              <li><a href="#" class="footer__text">Acquire Users</a></li>
+              <li><a href="#" class="footer__text">Content Marketing</a></li>
+              <li><a href="#" class="footer__text">Website Templates</a></li>
+              <li><a href="#" class="footer__text">Customer Management</a></li>
+              <li><a href="#" class="footer__text">Virtual Inbox</a></li>
+            </ul>
+            <h4 class="footer__title">Company</h4>
+            <ul>
+              <li><a href="#" class="footer__text">About Foundation</a></li>
+              <li><a href="#" class="footer__text">Brand Guidelines</a></li>
+              <li><a href="#" class="footer__text">Press Kit</a></li>
+              <li><a href="#" class="footer__text">Support</a></li>
+            </ul>
+          </div>
+          <ul>
+            <li><a href="#" class="footer__text">Terms</a></li>
+            <li><a href="#" class="footer__text">Privacy</a></li>
+            <li><a href="#" class="footer__text">License</a></li>
+          </ul>
+          <a href="#">
+            <img src="./assets/icon-fb.png" alt="fb" />
+            <img src="./assets/icon-twitter.png" alt="tw" />
+            <img src="./assets/LinkedIn.png" alt="li" />
+          </a>
         </div>
-        </div>
-    </section>
-    <section class="footer">
-        <div class="container"></div>
-    </section>
-</div>
+      </section>
+    </div>
   </body>
 </html>
