--- a/index.html
+++ b/index.html
@@ -168,49 +168,75 @@
         </div>
       </section>
       <section class="footer">
-        <div class="container">
-          <div class="footer__description">
-            <div class="logo">
-              <img src="./assets/logo.png" alt="logo" />
-              <div class="logo__contant">
-                <p class="logo__name">Foundation</p>
-                <p class="logo__text">Startup landing template</p>
+        <div class="footer_main">
+          <div class="container">
+            <div class="footer__description">
+              <div class="logo">
+                <img src="./assets/logoFooter.png" alt="logo" />
+                <div class="logo__contant">
+                  <p class="logo__name">Foundation</p>
+                  <p class="logo__text">Startup landing template</p>
+                </div>
+              </div>
+              <p class="footer__text">
+                Foundation is a website template for startups and small teams.
+                It helps to build a website in no time.
+              </p>
+              <div class="footer__app">
+                <img src="./assets/AppStore.png" alt="appStore" />
+                <img src="./assets/GooglePlay.png" alt="GooglePlay" />
               </div>
             </div>
-            <p class="footer__text">
-              Foundation is a website template for startups and small teams. It
-              helps to build a website in no time.
-            </p>
-            <img src="./assets/AppStore.png" alt="appStore" />
-            <img src="./assets/GooglePlay.png" alt="GooglePlay" />
+            <div class="footer__list">
+              <div class="footer__menu_section">
+                <h4 class="footer__title">Product</h4>
+                <ul class="footer__list_links">
+                  <li class="footer__link">
+                    <a href="#" class="footer__text">Acquire Users</a>
+                  </li>
+                  <li class="footer__link">
+                    <a href="#" class="footer__text">Content Marketing</a>
+                  </li>
+                  <li class="footer__link">
+                    <a href="#" class="footer__text">Website Templates</a>
+                  </li>
+                  <li class="footer__link">
+                    <a href="#" class="footer__text">Customer Management</a>
+                  </li>
+                  <li><a href="#" class="footer__text">Virtual Inbox</a></li>
+                </ul>
+              </div>
+              <div class="footer__menu_section">
+                <h4 class="footer__title">Company</h4>
+                <ul class="footer__list_links">
+                  <li class="footer__link">
+                    <a href="#" class="footer__text">About Foundation</a>
+                  </li>
+                  <li class="footer__link">
+                    <a href="#" class="footer__text">Brand Guidelines</a>
+                  </li>
+                  <li class="footer__link">
+                    <a href="#" class="footer__text">Press Kit</a>
+                  </li>
+                  <li class="footer__link">
+                    <a href="#" class="footer__text">Support</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
-          <div class="footer__links">
-            <h4 class="footer__title">Product</h4>
-            <ul>
-              <li><a href="#" class="footer__text">Acquire Users</a></li>
-              <li><a href="#" class="footer__text">Content Marketing</a></li>
-              <li><a href="#" class="footer__text">Website Templates</a></li>
-              <li><a href="#" class="footer__text">Customer Management</a></li>
-              <li><a href="#" class="footer__text">Virtual Inbox</a></li>
-            </ul>
-            <h4 class="footer__title">Company</h4>
-            <ul>
-              <li><a href="#" class="footer__text">About Foundation</a></li>
-              <li><a href="#" class="footer__text">Brand Guidelines</a></li>
-              <li><a href="#" class="footer__text">Press Kit</a></li>
-              <li><a href="#" class="footer__text">Support</a></li>
-            </ul>
-          </div>
-          <ul>
+        </div>
+        <div class="footer__part">
+          <ul class="footer__rules">
             <li><a href="#" class="footer__text">Terms</a></li>
             <li><a href="#" class="footer__text">Privacy</a></li>
             <li><a href="#" class="footer__text">License</a></li>
           </ul>
-          <a href="#">
-            <img src="./assets/icon-fb.png" alt="fb" />
-            <img src="./assets/icon-twitter.png" alt="tw" />
-            <img src="./assets/LinkedIn.png" alt="li" />
-          </a>
+          <div class="footer__network">
+            <a href="#"><img src="./assets/icon-fb.png" alt="fb" /></a>
+            <a href="#"><img src="./assets/icon-twitter.png" alt="tw" /></a>
+            <a href="#"><img src="./assets/LinkedIn.png" alt="li" /></a>
+          </div>
         </div>
       </section>
     </div>
