--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
           <div class="logo">
             <img src="./assets/logo.png" alt="logo" class="logo__img" />
-            <div class="logo__contant">
+            <div class="logo__content">
               <p class="logo__name">Foundation</p>
               <p class="logo__text">Startup landing template</p>
             </div>
@@ -61,7 +61,7 @@
 
       <section class="promo">
         <div class="container">
-          <div class="promo__contant">
+          <div class="promo__content">
             <h1 class="promo__title">A bill that’s fair and flexible</h1>
             <p class="promo__text">
               Create live segments and target the right people for messages
@@ -154,7 +154,7 @@
       </section>
       <section class="about">
         <div class="container">
-          <div class="about__contant">
+          <div class="about__content">
             <h3 class="about__subtitle">Communicate Better</h3>
             <h2 class="about__title">Millions of Wi-Fi hotsports</h2>
             <p class="about__text">
@@ -203,7 +203,7 @@
                   alt="logo"
                   class="logo__img"
                 />
-                <div class="logo__contant">
+                <div class="logo__content">
                   <p class="logo__name">Foundation</p>
                   <p class="logo__text">Startup landing template</p>
                 </div>
